option('tests',
       type : 'boolean',
       value : true,
       description : 'Run the test suite')

option('python_program',
       type : 'string',
       value : 'python3',
       description : 'The basename of the Python 3 executable the build system should use.')

option('nls',
       type : 'boolean',
       value : true,
       description : 'Enable native language support (translations)')

option('with_libkmod',
       type : 'boolean',
       value : true,
       description : 'Enable libkmod support for Linux kernel modules.  Disabling libkmod support will also disable kmod related inspections.')

option('with_libcap',
       type : 'boolean',
       value : true,
       description : 'Enable Linux capability(7) support using libcap.  Disabling libcap support will also disable capability(7)-related inspections.')

option('with_annocheck',
       type : 'boolean',
       value : true,
       description : 'Use annocheck(1) rather than libannocheck for binary file analysis.  Mutually exclusive with the with_libannocheck option.  Disabling both annocheck options will disable the annocheck inspection.')

option('with_libannocheck',
       type : 'boolean',
       value : false,
       description : 'Use libannocheck rather than annocheck(1) for binary file analysis.  Mutually exclusive with the with_annocheck option.  Disabling both annocheck options will disable the annocheck inspection.')

option('vendor_data_dir',
       type : 'string',
       value : '/usr/share/rpminspect',
       description : 'The location of vendor data files for rpminspect.')

option('default_workdir',
       type : 'string',
       value : '/var/tmp/rpminspect',
       description : 'Default working directory used by rpminspect.')
