install_headers(
    'constants.h',
    'helpers.h',
    'i18n.h',
    'init.h',
    'inspect.h',
    'output.h',
    'parallel.h',
    'parser.h',
    'queue.h',
    'readelf.h',
    'remedy.h',
    'rpminspect.h',
    'secrules.h',
    'types.h',
    'uthash.h',
    subdir : 'librpminspect'
)

subdir('compat')
