# Generate inspect_elf_bits.c
inspect_elf_bits_c = custom_target(
    'inspect_elf_bits.c',
    output : 'inspect_elf_bits.c',
    input : 'pic_bits.sh',
    command : ['@INPUT@', '@OUTPUT@'],
)

inspect_elf_bits_dep = declare_dependency(sources : [inspect_elf_bits_c])

# Build librpminspect
librpminspect_sources = [
    'abi.c',
    'arches.c',
    'badwords.c',
    'builds.c',
    'bytes.c',
    'checksums.c',
    'copyfile.c',
    'debug.c',
    'fileinfo.c',
    'files.c',
    'flags.c',
    'free.c',
    'ignore.c',
    'init.c',
    'inspect.c',
    'inspect_addedfiles.c',
    'inspect_abidiff.c',
    'inspect_annocheck.c',
    'inspect_arch.c',
    'inspect_capabilities.c',
    'inspect_changedfiles.c',
    'inspect_changelog.c',
    'inspect_desktop.c',
    'inspect_disttag.c',
    'inspect_dt_needed.c',
    'inspect_elf.c',
    'inspect_emptyrpm.c',
    'inspect_files.c',
    'inspect_filesize.c',
    'inspect_javabytecode.c',
    'inspect_kmidiff.c',
    'inspect_kmod.c',
    'inspect_license.c',
    'inspect_lostpayload.c',
    'inspect_lto.c',
    'inspect_manpage.c',
    'inspect_metadata.c',
    'inspect_modularity.c',
    'inspect_movedfiles.c',
    'inspect_ownership.c',
    'inspect_pathmigration.c',
    'inspect_permissions.c',
    'inspect_removedfiles.c',
    'inspect_shellsyntax.c',
    'inspect_specname.c',
    'inspect_subpackages.c',
    'inspect_symlinks.c',
    'inspect_types.c',
    'inspect_upstream.c',
    'inspect_xml.c',
    'koji.c',
    'kmods.c',
    'listfuncs.c',
    'local.c',
    'macros.c',
    'magic.c',
    'mkdirp.c',
    'output.c',
    'output_json.c',
    'output_text.c',
    'pairfuncs.c',
    'paths.c',
    'peers.c',
    'readelf.c',
    'readfile.c',
    'rebase.c',
    'release.c',
    'results.c',
    'rmtree.c',
    'rpm.c',
    'runcmd.c',
    'strfuncs.c',
    'tty.c',
    'unpack.c',
]
librpminspect = library(
    'rpminspect',
    librpminspect_sources,
    include_directories : inc,
    version : '0.5.0',
    install : true,
    dependencies : [
        inspect_elf_bits_dep,
        jsonc,
        xmlrpc,
        xmlrpc_client,
        libxml,
        rpm,
        libarchive,
        libelf,
        libkmod,
        libcurl,
        zlib,
        yaml,
        openssl,
        libcap,
        mandoc,
        magic,
        dl,
    ]
)
