# Generate inspect_elf_bits.c

pic_bits = find_program('pic_bits.sh')

inspect_elf_bits_c = custom_target(
    'inspect_elf_bits_c',
    output : 'inspect_elf_bits.c',
    command : [ pic_bits, '@OUTPUT@' ],
    install : false
)

inspect_elf_bits_dep = declare_dependency(sources : [ inspect_elf_bits_c ])

# Build librpminspect
librpminspect_sources = [
    'abi.c',
    'abspath.c',
    'arches.c',
    'badwords.c',
    'builds.c',
    'bytes.c',
    'checksums.c',
    'copyfile.c',
    'debug.c',
    'diags.c',
    'filecmp.c',
    'fileinfo.c',
    'files.c',
    'flags.c',
    'free.c',
    'init.c',
    'inspect.c',
    'inspect_addedfiles.c',
    'inspect_abidiff.c',
    'inspect_annocheck.c',
    'inspect_arch.c',
    'inspect_badfuncs.c',
    'inspect_capabilities.c',
    'inspect_changedfiles.c',
    'inspect_changelog.c',
    'inspect_config.c',
    'inspect_desktop.c',
    'inspect_disttag.c',
    'inspect_doc.c',
    'inspect_dsodeps.c',
    'inspect_elf.c',
    'inspect_emptyrpm.c',
    'inspect_files.c',
    'inspect_filesize.c',
    'inspect_javabytecode.c',
    'inspect_kmidiff.c',
    'inspect_kmod.c',
    'inspect_license.c',
    'inspect_lostpayload.c',
    'inspect_lto.c',
    'inspect_manpage.c',
    'inspect_metadata.c',
    'inspect_modularity.c',
    'inspect_movedfiles.c',
    'inspect_ownership.c',
    'inspect_patches.c',
    'inspect_pathmigration.c',
    'inspect_permissions.c',
    'inspect_politics.c',
    'inspect_removedfiles.c',
    'inspect_runpath.c',
    'inspect_shellsyntax.c',
    'inspect_specname.c',
    'inspect_subpackages.c',
    'inspect_symlinks.c',
    'inspect_types.c',
    'inspect_upstream.c',
    'inspect_virus.c',
    'inspect_xml.c',
    'koji.c',
    'kmods.c',
    'listfuncs.c',
    'local.c',
    'macros.c',
    'magic.c',
    'mkdirp.c',
    'output.c',
    'output_json.c',
    'output_text.c',
    'output_xunit.c',
    'pairfuncs.c',
    'paths.c',
    'peers.c',
    'readelf.c',
    'readfile.c',
    'rebase.c',
    'release.c',
    'results.c',
    'rmtree.c',
    'rpm.c',
    'runcmd.c',
    'secrule.c',
    'strfuncs.c',
    'tty.c',
    'uncompress.c',
    'unpack.c',
]
librpminspect = library(
    'rpminspect',
    librpminspect_sources,
    include_directories : inc,
    version : '0.5.0',
    install : true,
    dependencies : [
        inspect_elf_bits_dep,
        jsonc,
        xmlrpc,
        xmlrpc_client,
        libxml,
        rpm,
        libarchive,
        libelf,
        libkmod,
        libcurl,
        zlib,
        yaml,
        openssl,
        libcap,
        mandoc,
        magic,
        clamav,
        dl,
    ]
)
