lib_LTLIBRARIES = librpminspect.la
librpminspect_la_SOURCES = badwords.c \
                           compression.c \
                           copyfile.c \
                           files.c \
                           free.c \
                           init.c \
                           inspect.c \
                           inspect_elf.c \
                           inspect_emptyrpm.c \
                           inspect_kernel.c \
                           inspect_license.c \
                           inspect_manpage.c \
                           inspect_metadata.c \
                           inspect_xml.c \
                           koji.c \
                           listfuncs.c \
                           local.c \
                           mkdirp.c \
                           output.c \
                           output_json.c \
                           output_text.c \
                           peers.c \
                           readelf.c \
                           results.c \
                           rmtree.c \
                           rpm.c \
                           strfuncs.c \
                           tty.c
librpminspect_la_CPPFLAGS = $(JSON_C_CFLAGS) \
                            $(XMLRPC_CFLAGS) \
                            $(LIBXML_CFLAGS) \
                            $(RPM_CFLAGS) \
                            $(LIBARCHIVE_CFLAGS) \
                            $(LIBELF_CFLAGS)
librpminspect_la_LDFLAGS = $(JSON_C_LDFLAGS) \
                           $(XMLRPC_LDFLAGS) \
                           $(LIBXML_LDFLAGS) \
                           $(RPM_LDFLAGS) \
                           $(LIBARCHIVE_LDFLAGS) \
                           $(LIBELF_LDFLAGS)

# This source file is generated by the 'pic_bits.sh' script
librpminspect_la_SOURCES += inspect_elf_bits.c
BUILT_SOURCES = inspect_elf_bits.c
CLEANFILES = inspect_elf_bits.c

inspect_elf_bits.c: pic_bits.sh /usr/include/elf.h
	./pic_bits.sh > $@
