include $(top_srcdir)/aminclude_static.am

librpminspectdir = $(includedir)/librpminspect
librpminspect_HEADERS = constants.h \
                        inspect.h \
                        output.h \
                        readelf.h \
                        results.h \
                        rpminspect.h \
                        types.h

lib_LTLIBRARIES = librpminspect.la
librpminspect_la_SOURCES = badwords.c \
                           checksums.c \
                           copyfile.c \
                           files.c \
                           free.c \
                           init.c \
                           inspect.c \
                           inspect_addedfiles.c \
                           inspect_changedfiles.c \
                           inspect_desktop.c \
                           inspect_disttag.c \
                           inspect_elf.c \
                           inspect_emptyrpm.c \
                           inspect_javabytecode.c \
                           inspect_kernel.c \
                           inspect_license.c \
                           inspect_manpage.c \
                           inspect_metadata.c \
                           inspect_modularity.c \
                           inspect_removedfiles.c \
                           inspect_specname.c \
                           inspect_xml.c \
                           koji.c \
                           listfuncs.c \
                           local.c \
                           magic.c \
                           mkdirp.c \
                           output.c \
                           output_json.c \
                           output_text.c \
                           peers.c \
                           readelf.c \
                           results.c \
                           rmtree.c \
                           rpm.c \
                           runcmd.c \
                           strfuncs.c \
                           tty.c \
                           unpack.c
librpminspect_la_CPPFLAGS = $(JSON_C_CFLAGS) \
                            $(XMLRPC_CFLAGS) \
                            $(LIBXML_CFLAGS) \
                            $(RPM_CFLAGS) \
                            $(LIBARCHIVE_CFLAGS) \
                            $(LIBELF_CFLAGS) \
                            $(LIBKMOD_CFLAGS) \
                            $(ZLIB_CFLAGS) \
                            $(OPENSSL_CFLAGS) \
                            $(CODE_COVERAGE_CPPFLAGS)

librpminspect_la_CFLAGS = -D_GNU_SOURCE \
                          -DPACKAGE_VERSION=\"$(PACKAGE_VERSION)\" \
                          $(CODE_COVERAGE_CFLAGS)

librpminspect_la_LIBADD = $(JSON_C_LIBS) \
                          $(XMLRPC_LIBS) \
                          $(LIBXML_LIBS) \
                          $(RPM_LIBS) \
                          $(LIBARCHIVE_LIBS) \
                          $(LIBELF_LIBS) \
                          $(LIBKMOD_LIBS) \
                          $(ZLIB_LIBS) \
                          $(LIBMANDOC_LIBS) \
                          $(INIPARSER_LIBS) \
                          $(MAGIC_LIBS) \
                          $(OPENSSL_LIBS) \
                          $(DL_LIBS) \
                          $(CODE_COVERAGE_LIBS)

# This source file is generated by the 'pic_bits.sh' script
nodist_librpminspect_la_SOURCES = inspect_elf_bits.c
BUILT_SOURCES = inspect_elf_bits.c
CLEANFILES = inspect_elf_bits.c
EXTRA_DIST = pic_bits.sh

inspect_elf_bits.c: pic_bits.sh /usr/include/elf.h
	$(srcdir)/pic_bits.sh $@

clean-local: code-coverage-clean
distclean-local: code-coverage-dist-clean
